--- a/templates/make_dist.sh.j2
+++ b/templates/make_dist.sh.j2
@@ -8,8 +8,16 @@ packages="{% for subpackage in subpackages %}{{ subpackage.name }} {% endfor %}"
 base_dir="$PWD"
 
 for pkg in ${packages}; do
-  ./dev/release-gap-package --skip-existing-release --srcdir ${base_dir}/${pkg} --webdir ${base_dir}/gh-pages/${pkg} --update-script ${base_dir}/gh-pages/update.g --release-script ${base_dir}/dev/.release $@
+	./dev/release-gap-package --skip-existing-release --srcdir ${base_dir}/${pkg} --webdir ${base_dir}/gh-pages/${pkg} --update-script ${base_dir}/gh-pages/update.g --release-script ${base_dir}/dev/.release
 done
+
+# publish subsplits
+{% for subpackage in subpackages %}
+{% if subpackage.has_subsplit is defined and subpackage.has_subsplit %}
+git subtree split --prefix={{ subpackage.name }} -b {{ subpackage.name }}-split
+git push https://homalg-project:$SUBSPLIT_PUSH_SECRET@github.com/homalg-project/{{ subpackage.name }} {{ subpackage.name }}-split:master
+{% endif %}
+{% endfor %}
 {% else %}
-./dev/release-gap-package --skip-existing-release --release-script dev/.release $@
+./dev/release-gap-package --skip-existing-release --release-script dev/.release
 {% endif %}
