--- a/templates/simulate_dist.sh.j2
+++ b/templates/simulate_dist.sh.j2
@@ -1,15 +1,16 @@
 #!/bin/bash
 
 set -e
-
 {% if is_meta_package %}
-packages="{% for subpackage in subpackages %}{{ subpackage.name }} {% endfor %}"
+{% for subpackage in subpackages %}
 
-base_dir="$PWD"
-
-for pkg in ${packages}; do
-	./dev/release-gap-package --skip-existing-release --srcdir ${base_dir}/${pkg} --webdir ${base_dir}/gh-pages/${pkg} --update-script ${base_dir}/gh-pages/update.g --release-script ${base_dir}/dev/.release --only-tarball
-done
+# {{ subpackage.name }}
+./dev/release-gap-package --skip-existing-release --srcdir "$PWD/{{ subpackage.name }}" --webdir "$PWD/gh-pages/{{ subpackage.name }}" --update-script "$PWD/gh-pages/update.g" --release-script "$PWD/dev/.release"  --only-tarball
+{% if subpackage.has_subsplit is defined and subpackage.has_subsplit %}
+git subtree split --prefix={{ subpackage.name }} -b {{ subpackage.name }}-split
+{% endif %}
+{% endfor %}
 {% else %}
+
 ./dev/release-gap-package --skip-existing-release --release-script dev/.release --only-tarball
 {% endif %}
