Do not simulate subsplits to keep testing PRs as fast as possible

--- a/templates/simulate_dist.sh.j2
+++ b/templates/simulate_dist.sh.j2
@@ -7,7 +7,8 @@ set -e
 # {{ subpackage.name }}
 ./dev/release-gap-package --skip-existing-release --srcdir "$PWD/{{ subpackage.name }}" --webdir "$PWD/gh-pages/{{ subpackage.name }}" --update-script "$PWD/gh-pages/update.g" --release-script "$PWD/dev/.release"  --only-tarball
 {% if subpackage.has_subsplit is defined and subpackage.has_subsplit %}
-git subtree split --prefix={{ subpackage.name }} -b {{ subpackage.name }}-split
+# creating subsplits is slow and should only rarely result in errors -> do not simulate to keep testing PRs as fast as possible
+#git subtree split --prefix={{ subpackage.name }} -b {{ subpackage.name }}-split
 {% endif %}
 {% endfor %}
 {% else %}
