--- a/templates/Tests.yml.j2
+++ b/templates/Tests.yml.j2
@@ -82,7 +82,7 @@ jobs:
         run: |
           cd {{ package.name }}
         {%- if ci_do_not_run_tests is not defined or not ci_do_not_run_tests %}
-          LANG=C.UTF-8 python3 dev/process_coverage.py
+          python3 dev/process_coverage.py
         {%- endif %}
           git config --global user.name "Bot"
           git config --global user.email "empty"
