Do not use --skip-existing-release for release simulation

--- a/templates/simulate_dist.sh.j2
+++ b/templates/simulate_dist.sh.j2
@@ -5,7 +5,7 @@ set -e
 {% for subpackage in subpackages %}
 
 # {{ subpackage.name }}
-./dev/release-gap-package --skip-existing-release --srcdir "$PWD/{{ subpackage.name }}" --webdir "$PWD/gh-pages/{{ subpackage.name }}" --update-script "$PWD/gh-pages/update.g" --release-script "$PWD/dev/.release" --only-tarball
+./dev/release-gap-package --srcdir "$PWD/{{ subpackage.name }}" --webdir "$PWD/gh-pages/{{ subpackage.name }}" --update-script "$PWD/gh-pages/update.g" --release-script "$PWD/dev/.release" --only-tarball
 {% if subpackage.has_subsplit is defined and subpackage.has_subsplit %}
 # creating subsplits is slow and should only rarely result in errors -> do not simulate to keep testing PRs as fast as possible
 #git subtree split --prefix={{ subpackage.name }} -b {{ subpackage.name }}-split
@@ -13,5 +13,5 @@ set -e
 {% endfor %}
 {% else %}
 
-./dev/release-gap-package --skip-existing-release --release-script dev/.release --only-tarball
+./dev/release-gap-package --release-script dev/.release --only-tarball
 {% endif %}
