--- a/templates/homalg-project.github.io_package_table.j2
+++ b/templates/homalg-project.github.io_package_table.j2
@@ -33,11 +33,11 @@
 [tests-{{ package.name }}-url]: https://github.com/homalg-project/{{ package.repo_name }}/actions/workflows/Tests.yml?query=branch%3Amaster
 
 {% if package.name == package.repo_name %}
-[codecov-{{ package.name }}-img]: https://codecov.io/gh/homalg-project/{{ package.name }}/branch/master/graph/badge.svg
-[codecov-{{ package.name }}-url]: https://codecov.io/gh/homalg-project/{{ package.name }}
+[codecov-{{ package.name }}-img]: https://app.codecov.io/gh/homalg-project/{{ package.name }}/branch/master/graph/badge.svg
+[codecov-{{ package.name }}-url]: https://app.codecov.io/gh/homalg-project/{{ package.name }}
 {% else %}
-[codecov-{{ package.name }}-img]: https://codecov.io/gh/homalg-project/{{ package.repo_name }}/branch/master/graph/badge.svg?flag={{ package.name }}
-[codecov-{{ package.name }}-url]: https://codecov.io/gh/homalg-project/{{ package.repo_name }}/tree/master/{{ package.name }}
+[codecov-{{ package.name }}-img]: https://app.codecov.io/gh/homalg-project/{{ package.repo_name }}/branch/master/graph/badge.svg?flag={{ package.name }}
+[codecov-{{ package.name }}-url]: https://app.codecov.io/gh/homalg-project/{{ package.repo_name }}/tree/master/{{ package.name }}
 {% endif %}
 
 {% endif %}
