Switch from https://codecov.io -> https://app.codecov.io
resolves https://github.com/homalg-project/PackageJanitor/issues/121

--- a/templates/homalg-project.github.io_package_table.j2
+++ b/templates/homalg-project.github.io_package_table.j2
@@ -34,10 +34,10 @@
 
 {% if package.name == package.repo_name %}
 [codecov-{{ package.name }}-img]: https://codecov.io/gh/homalg-project/{{ package.name }}/branch/master/graph/badge.svg
-[codecov-{{ package.name }}-url]: https://codecov.io/gh/homalg-project/{{ package.name }}
+[codecov-{{ package.name }}-url]: https://app.codecov.io/gh/homalg-project/{{ package.name }}
 {% else %}
 [codecov-{{ package.name }}-img]: https://codecov.io/gh/homalg-project/{{ package.repo_name }}/branch/master/graph/badge.svg?flag={{ package.name }}
-[codecov-{{ package.name }}-url]: https://codecov.io/gh/homalg-project/{{ package.repo_name }}/tree/master/{{ package.name }}
+[codecov-{{ package.name }}-url]: https://app.codecov.io/gh/homalg-project/{{ package.repo_name }}/tree/master/{{ package.name }}
 {% endif %}
 
 {% endif %}
