Use correct date in released manuals

--- a/templates/simulate_dist.sh.j2
+++ b/templates/simulate_dist.sh.j2
@@ -6,7 +6,7 @@ set -e
 
 # {{ subpackage.name }}
 echo "Simulate release of {{ subpackage.name }}"
-./dev/release-gap-package --srcdir "$PWD/{{ subpackage.name }}" --webdir "$PWD/gh-pages/{{ subpackage.name }}" --update-script "$PWD/gh-pages/update.g" --release-script "$PWD/dev/.release" --only-tarball
+GAP_PKG_RELEASE_DATE=$(date -I) ./dev/release-gap-package --srcdir "$PWD/{{ subpackage.name }}" --webdir "$PWD/gh-pages/{{ subpackage.name }}" --update-script "$PWD/gh-pages/update.g" --release-script "$PWD/dev/.release" --only-tarball
 {% if subpackage.has_subsplit is defined and subpackage.has_subsplit %}
 # creating subsplits is slow and should only rarely result in errors -> do not simulate to keep testing PRs as fast as possible
 #git subtree split --prefix={{ subpackage.name }} -b {{ subpackage.name }}-split
@@ -15,5 +15,5 @@ echo ""
 {% endfor %}
 {% else %}
 
-./dev/release-gap-package --release-script dev/.release --only-tarball
+GAP_PKG_RELEASE_DATE=$(date -I) ./dev/release-gap-package --release-script dev/.release --only-tarball
 {% endif %}
