--- a/templates/make_dist.sh.j2
+++ b/templates/make_dist.sh.j2
@@ -6,7 +6,7 @@ set -e
 
 # {{ subpackage.name }}
 echo "Release {{ subpackage.name }}"
-./dev/release-gap-package --skip-existing-release --srcdir "$PWD/{{ subpackage.name }}" --webdir "$PWD/gh-pages/{{ subpackage.name }}" --update-script "$PWD/gh-pages/update.g" --release-script "$PWD/dev/.release"
+GAP_PKG_RELEASE_DATE=$(date -I) ./dev/release-gap-package --skip-existing-release --srcdir "$PWD/{{ subpackage.name }}" --webdir "$PWD/gh-pages/{{ subpackage.name }}" --update-script "$PWD/gh-pages/update.g" --release-script "$PWD/dev/.release"
 {% if subpackage.has_subsplit is defined and subpackage.has_subsplit %}
 git subtree split --prefix={{ subpackage.name }} -b {{ subpackage.name }}-split
 git push https://homalg-project:$SUBSPLIT_PUSH_SECRET@github.com/homalg-project/{{ subpackage.name }} {{ subpackage.name }}-split:master
@@ -15,5 +15,5 @@ echo ""
 {% endfor %}
 {% else %}
 
-./dev/release-gap-package --skip-existing-release --release-script dev/.release
+GAP_PKG_RELEASE_DATE=$(date -I) ./dev/release-gap-package --skip-existing-release --release-script dev/.release
 {% endif %}
