--- a/templates/Tests.yml.j2
+++ b/templates/Tests.yml.j2
@@ -67,16 +67,16 @@ jobs:
     {%- if ci_do_not_run_tests is not defined or not ci_do_not_run_tests %}
       - name: Test {{ package.name }}
         run: |
-          make -C {{ package.name }} -j $(nproc) --output-sync ci-test
+          make -C {{ package.name }} --trace -j $(nproc) --output-sync ci-test
     {%- else %}
       - name: Build documentation of {{ package.name }}
         run: |
-          make -C {{ package.name }} -j $(nproc) --output-sync doc
+          make -C {{ package.name }} --trace -j $(nproc) --output-sync doc
     {%- endif %}
     {%- for package_to_test in ci_packages_to_test %}
       - name: Test {{ package_to_test }}
         run: |
-          make -C {{ package_to_test }} -j $(nproc) --output-sync ci-test
+          make -C {{ package_to_test }} --trace -j $(nproc) --output-sync ci-test
     {%- endfor %}
       - name: Release package or simulate release
         run: |
