--- a/templates/meta_package_makefile.j2
+++ b/templates/meta_package_makefile.j2
@@ -1,8 +1,27 @@
+################################
 doc:{% for doc_package in doc_packages %} doc_{{ doc_package.name }}{% endfor %}
 
-
 {% for doc_package in doc_packages %}
+
 doc_{{ doc_package.name }}:
 	$(MAKE) -C {{ doc_package.name }} doc
-
 {% endfor %}
+
+################################
+test: doc{% for doc_package in doc_packages %} test_{{ doc_package.name }}{% endfor %}
+
+{% for doc_package in doc_packages %}
+
+test_{{ doc_package.name }}:
+	$(MAKE) -C {{ doc_package.name }} test
+{% endfor %}
+
+################################
+ci-test_all_packages:{% for doc_package in doc_packages %} ci-test_{{ doc_package.name }}{% endfor %}
+
+{% for doc_package in doc_packages %}
+
+ci-test_{{ doc_package.name }}:
+	$(MAKE) -C {{ doc_package.name }} ci-test
+{% endfor %}
+
