Add 'update-notebooks' to makefiles to simplify complying with recent code updates.
e.g., when View/Display strings or the number of operations in a category are changed.

--- a/templates/meta_package_makefile.j2
+++ b/templates/meta_package_makefile.j2
@@ -25,3 +25,11 @@ ci-test_{{ doc_package.name }}:
 	$(MAKE) -C {{ doc_package.name }} ci-test
 {% endfor %}
 
+################################
+update-notebooks:
+	for package in */; do \
+		if [ -f "$$package/makefile" ] && grep -q "update-notebooks:" "$$package/makefile"; then \
+			$(MAKE) -C $$package update-notebooks; \
+		fi \
+	done
+
