--- a/templates/makefile.j2
+++ b/templates/makefile.j2
@@ -50,6 +50,12 @@ test-notebooks:
 		rm modified_in out modified_out; \
 	done
 
+update-notebooks:
+	cd examples/notebooks/; \
+	for filename in *.ipynb; do \
+		jupyter nbconvert --ExecutePreprocessor.kernel_name=julia-$$(julia -e 'print(VERSION.major); print("."); print(VERSION.minor)') --ExecutePreprocessor.record_timing=False --to notebook --inplace --execute "$$filename"; \
+	done
+
 {% endif %}
 test-spacing:
 	# exit code 1 means no match, which is what we want here (exit code 2 signals an error)
