--- a/templates/Tests.yml.j2
+++ b/templates/Tests.yml.j2
@@ -100,6 +100,8 @@ jobs:
     {%- if ci_do_not_run_tests is not defined or not ci_do_not_run_tests %}
       - name: Upload code coverage
         if: github.event_name != 'schedule' && matrix.image == 'ghcr.io/homalg-project/gap-docker:latest'
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
         run: |
           cd {{ package.name }}
           ./dev/upload_codecov.sh
