update gap_to_julia to
1) transpile a specific package (or list of packages) by passing their names
2) add .generate.sh in each julia-package to generate it using 'make gen'

--- a/gap_to_julia/templates/makefile.j2
+++ b/gap_to_julia/templates/makefile.j2
@@ -1,16 +1,19 @@
 .PHONY: test
 
+install:
+	julia -e 'using Pkg; Pkg.develop(path=".");'
+
 test:
 	julia -e 'using Pkg; Pkg.test("{{ package_name }}");'
 
 gen:
-	../gap_to_julia/gap_to_julia {{ package_name }}
+	./.generate.sh
 
 clean-gen:
 	rm -f ./src/gap/*.autogen.jl
 	rm -f ./src/gap/*/*.autogen.jl
 	rm -f ./docs/src/*.autogen.md
-	../gap_to_julia/gap_to_julia {{ package_name }}
+	./.generate.sh
 
 codecov:
 	julia --project=. -e 'using Coverage; using Pkg; Pkg.test(coverage=true); LCOV.writefile("coverage.lcov", process_folder(pwd()));'
