--- a/gap_to_julia/templates/README.md.j2
+++ b/gap_to_julia/templates/README.md.j2
@@ -9,7 +9,7 @@
 
 <!-- END HEADER -->
 
-This is the Julia version of [CAP-based][CAP_based] package [{{ package_name }}][{{ package_name }}].
+This is the Julia version of the [CAP-based][CAP_based] package [{{ package_name }}][{{ package_name }}].
 
 [CAP_based]: https://homalg-project.github.io/docs/CAP_project-based/
 [{{ package_name }}]: https://homalg-project.github.io/pkg/{{ package_name }}
