Add '\r' removal to the Jinja filter for package_subtitle
to prevent CRLF artifacts on Windows and ensure consistent rendering across platforms.

--- a/gap_to_julia/templates/README.md.j2
+++ b/gap_to_julia/templates/README.md.j2
@@ -1,7 +1,7 @@
 <!-- BEGIN HEADER -->
 # {{ package_name }}
 
-### {{ package_subtitle | replace('\n', '') }}
+### {{ package_subtitle | replace('\r', '') | replace('\n', '') }}
 
 | Documentation |
 | ------------- |
