Refactor author and subtitle extraction
- Extract authors via grep/paste/awk and subtitle via grep; remove GAP-based extraction
- Other cleanups

--- a/gap_to_julia/templates/Project.toml.j2
+++ b/gap_to_julia/templates/Project.toml.j2
@@ -1,7 +1,7 @@
 name = "{{ package_name }}"
 uuid = "{{ package_uuid.stdout | replace('\r', '') }}"
 authors = [
-{{ package_authors | replace('\r', '') }}
+{{ package_authors | join(",\n") }}
 ]
 
 # Transpiled from GAP's {{ package_name }} v{{ package_version_in_gap.stdout | replace('\r', '') }}
