Flag missing compat entries in Project.toml
- Add task to detect missing [compat] entries for julia and all (weak) dependencies when gen_full == '1'
- Append placeholders to Project.toml to highlight missing compat versions

--- a/gap_to_julia/templates/Project.toml.j2
+++ b/gap_to_julia/templates/Project.toml.j2
@@ -26,6 +26,9 @@ version = "{{ current_version.stdout | replace('\r', '') }}"
 
 [compat]
 {{ compat_section.stdout | replace('\r', '') }}
+{% if missing_compat_entries.stdout %}
+{{ missing_compat_entries.stdout | replace('\n', '\n') }}
+{% endif %}
 
 [extras]
 {% if extras %}
